Handle AudioParam start clamping more efficiently.

Add a new vector to keep track of all newly inserted events.  This
vector is processed once in the audio thread to clamp the start time
of the event if needed.  Once processed, this vector is cleared.

Previously, the clamp check would process the entire event list to see
if any event needed to be clamped.  Most of the time, this is wasted
because there are no events to be clamped because they're all in the
future or because they've already been clamped.

Also removed unneeded member functions and variables.

Bug: 780125
Test:
Change-Id: I73b871d8fa87a68e482cb98d48af33e05d1f0cfb